--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
+            <!--Unordered list starts-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,11 +23,13 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
+            <!--Unordered list ends-->
         </div>
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-Optimization" >
+            <!--Add image element-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -34,6 +37,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
+            <!--Add image element-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -41,6 +45,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
+            <!--Add image element-->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -51,6 +56,7 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
+            <!--Add image element-->
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -58,6 +64,7 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
+            <!--Add image element-->
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -65,6 +72,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
+            <!--Add image element-->
             <img src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
