--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div id="search-engine-optimization" class="search-engine-Optimization" >
+        <div id="search-engine-optimization" alt="a notebook with lots of color pencils" class="search-engine-Optimization" >
             <!--Add image element-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
