--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="content">
         <div id="search-engine-optimization" alt="a notebook with lots of color pencils" class="search-engine-Optimization" >
             <!--Add image element-->
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="a man holding a cell phone while working on a macbook" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
