--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
             <!--Add image element-->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="bunch of icons shows on the table" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
