--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div id="search-engine-optimization" alt="a notebook with lots of color pencils" class="search-engine-Optimization" >
+        <div id="search-engine-optimization" class="search-engine-Optimization" >
             <!--Add image element-->
-            <img src="./assets/images/search-engine-optimization.jpg" alt="a man holding a cell phone while working on a macbook" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="a notebook with lots of color pencils" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -38,7 +38,7 @@
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
             <!--Add image element-->
-            <img src="./assets/images/online-reputation-management.jpg" alt="bunch of icons shows on the table" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="a man holding a cell phone while working on a macbook"  class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -46,7 +46,7 @@
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
             <!--Add image element-->
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="bringing customers to the website" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -65,7 +65,7 @@
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <!--Add image element-->
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="how to attract customers" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -73,7 +73,7 @@
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <!--Add image element-->
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="calculating the profits and loss" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
