--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Marketing Agency</title>
 </head>
 
 <body>
@@ -26,27 +26,27 @@
             <!--Unordered list ends-->
         </div>
     </div>
-    <div class="hero"></div>
+    <div class="hero">
     <div class="content">
-        <div id="search-engine-optimization" class="search-engine-Optimization" >
-            <!--Add image element-->
-            <img src="./assets/images/search-engine-optimization.jpg" alt="a notebook with lots of color pencils" class="float-left" />
+        <div id="search-engine-optimization" class="search-engine-optimization">
+            <!--Add alt element-->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="a notebook with lots of color pencils"  class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <!--Add image element-->
-            <img src="./assets/images/online-reputation-management.jpg" alt="a man holding a cell phone while working on a macbook"  class="float-right" />
+        <div id="online-reputation-management"  class="online-reputation-management">
+            <!--Add alt element-->
+            <img src="./assets/images/online-reputation-management.jpg" alt="a man holding a cell phone while working on a macbook" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <!--Add image element-->
-            <img src="./assets/images/social-media-marketing.jpg" alt="bringing customers to the website" class="float-left" />
+            <!--Add alt element-->
+            <img src="./assets/images/social-media-marketing.jpg" alt="bunch of icons shows on the table" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -56,15 +56,15 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <!--Add image element-->
-            <img src="./assets/images/lead-generation.png" />
+            <!--Add alt element-->
+            <img src="./assets/images/lead-generation.png" alt="bringing customers to the website" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <!--Add image element-->
+            <!--Add alt element-->
             <img src="./assets/images/brand-awareness.png" alt="how to attract customers" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -72,7 +72,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <!--Add image element-->
+            <!--Add alt element-->
             <img src="./assets/images/cost-management.png" alt="calculating the profits and loss" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
@@ -85,6 +85,6 @@
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
-</body>
+    </body>
 
 </html>
