--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <!--Unordered list ends-->
         </div>
     </div>
-    <div class="hero">
-    <div class="content">
+    <div class="hero" ></div>
+    <section class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <!--Add alt element-->
             <img src="./assets/images/search-engine-optimization.jpg" alt="a notebook with lots of color pencils"  class="float-left" />
@@ -52,9 +52,9 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
     <div class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <!--Add alt element-->
             <img src="./assets/images/lead-generation.png" alt="bringing customers to the website" />
@@ -62,7 +62,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <!--Add alt element-->
             <img src="./assets/images/brand-awareness.png" alt="how to attract customers" />
@@ -70,7 +70,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit">
             <h3>Cost Management</h3>
             <!--Add alt element-->
             <img src="./assets/images/cost-management.png" alt="calculating the profits and loss" />
