--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
             </p>
         </div>
     </div>
+    <!--footer element starts-->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+    <!--footer element Ends-->
     </body>
 
 </html>
